# AgenticAIRulez

./: .gitignore  GETTING_STARTED.md  LICENSE  README.md  package.json  setup.sh
agents/: AGENT_ROLES.md
cli/: index.js
docs/: REFERENCES.md  SECURITY_SETUP.md
setup/: apply-rules.js  detect-stack.js
stacks/dotnet-bff/: CLAUDE.md.template  Directory.Build.props
stacks/python-fastapi/: .eslintrc.js  CLAUDE.md.template  pyproject.toml
